--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://johnson-darko.github.io/shswassce/",
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
@@ -8,7 +9,8 @@
     "build": "vite build",
     "start": "vite preview",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
@@ -97,6 +99,7 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.0.0",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
