--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "test": "jest"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
@@ -90,6 +91,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
@@ -101,8 +103,10 @@
     "cross-env": "^10.0.0",
     "esbuild": "^0.25.0",
     "gh-pages": "^6.3.0",
+    "jest": "^30.1.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
     "vite": "^5.4.19"
