--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -2,12 +2,12 @@
   "name": "Ghana University Admission Guide",
   "short_name": "GH Uni Guide",
   "description": "Check your WASSCE eligibility for Ghana universities instantly - works offline",
-  "start_url": "/shswassce/",
+  "start_url": "https://johnson-darko.github.io/shswassce/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
-  "scope": "/shswassce/",
+  "scope": "https://johnson-darko.github.io/shswassce/",
   "categories": ["education", "reference", "productivity"],
   "lang": "en",
   "icons": [
