--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+  "prebuild": "node update-manifest.cjs",
+  "dev": "vite",
+  "build": "vite build",
     "start": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push",
