--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-  "prebuild": "node update-manifest.cjs",
-  "dev": "vite",
-  "build": "vite build",
+    "prebuild": "node update-manifest.cjs",
+    "dev": "vite",
+    "build": "vite build",
     "start": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push",
@@ -22,6 +22,7 @@
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
+    "@capacitor/local-notifications": "^7.0.3",
     "@capacitor/network": "^7.0.2",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
